# parse

./: .gitignore  README.md  pyproject.toml
parse/: __init__.py  parser.py
